// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`tester la partie tester la methode principale playGame tester le cas de draw 1`] = `
[
  "
Bienvenue à X - O game
  1. Start the game 
  2. Quit the game",
  "choisissez une option : ",
  "player 1 identifiez-vous :",
  "Donner votre nom : ",
  "choisissez votre symbol : ",
  "player 2 identifiez-vous :",
  "Donner votre nom : ",
  "choisissez votre symbol : ",
  " 1 | 2 | 3 
___|___|___
 4 | 5 | 6 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Aziz, choisit une position : ",
  " X | 2 | 3 
___|___|___
 4 | 5 | 6 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Ouss, choisit une position : ",
  " X | O | 3 
___|___|___
 4 | 5 | 6 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Aziz, choisit une position : ",
  " X | O | X 
___|___|___
 4 | 5 | 6 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Ouss, choisit une position : ",
  " X | O | X 
___|___|___
 4 | O | 6 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Aziz, choisit une position : ",
  " X | O | X 
___|___|___
 X | O | 6 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Ouss, choisit une position : ",
  " X | O | X 
___|___|___
 X | O | O 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Aziz, choisit une position : ",
  " X | O | X 
___|___|___
 X | O | O 
___|___|___
 7 | X | 9 
   |   |   ",
  "c'est le tour de Ouss, choisit une position : ",
  " X | O | X 
___|___|___
 X | O | O 
___|___|___
 O | X | 9 
   |   |   ",
  "c'est le tour de Aziz, choisit une position : ",
  " X | O | X 
___|___|___
 X | O | O 
___|___|___
 O | X | X 
   |   |   ",
  "égalité !",
]
`;

exports[`tester la partie tester la methode principale playGame win moves for player 1 et la boucle s'arrête au bon moment 1`] = `
[
  "
Bienvenue à X - O game
  1. Start the game 
  2. Quit the game",
  "choisissez une option : ",
  "player 1 identifiez-vous :",
  "Donner votre nom : ",
  "choisissez votre symbol : ",
  "player 2 identifiez-vous :",
  "Donner votre nom : ",
  "choisissez votre symbol : ",
  " 1 | 2 | 3 
___|___|___
 4 | 5 | 6 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Aziz, choisit une position : ",
  " X | 2 | 3 
___|___|___
 4 | 5 | 6 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Ouss, choisit une position : ",
  " X | O | 3 
___|___|___
 4 | 5 | 6 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Aziz, choisit une position : ",
  " X | O | X 
___|___|___
 4 | 5 | 6 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Ouss, choisit une position : ",
  " X | O | X 
___|___|___
 O | 5 | 6 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Aziz, choisit une position : ",
  " X | O | X 
___|___|___
 O | X | 6 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Ouss, choisit une position : ",
  " X | O | X 
___|___|___
 O | X | O 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Aziz, choisit une position : ",
  "Aziz a gagné cette partie !",
  " X | O | X 
___|___|___
 O | X | O 
___|___|___
 X | 8 | 9 
   |   |   ",
]
`;

exports[`tester la partie tester restartGame valider le premier choix avec un cas de win  1`] = `
[
  "
Bienvenue à X - O game
  1. Start the game 
  2. Quit the game",
  "choisissez une option : ",
  "player 1 identifiez-vous :",
  "Donner votre nom : ",
  "choisissez votre symbol : ",
  "player 2 identifiez-vous :",
  "Donner votre nom : ",
  "choisissez votre symbol : ",
  "
Game Over !
  1. Restart Game
  2. Quit Game",
  "choisissez une option : ",
  " 1 | 2 | 3 
___|___|___
 4 | 5 | 6 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Aziz, choisit une position : ",
  " X | 2 | 3 
___|___|___
 4 | 5 | 6 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Ouss, choisit une position : ",
  " X | O | 3 
___|___|___
 4 | 5 | 6 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Aziz, choisit une position : ",
  " X | O | X 
___|___|___
 4 | 5 | 6 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Ouss, choisit une position : ",
  " X | O | X 
___|___|___
 O | 5 | 6 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Aziz, choisit une position : ",
  " X | O | X 
___|___|___
 O | X | 6 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Ouss, choisit une position : ",
  " X | O | X 
___|___|___
 O | X | O 
___|___|___
 7 | 8 | 9 
   |   |   ",
  "c'est le tour de Aziz, choisit une position : ",
  "Aziz a gagné cette partie !",
  " X | O | X 
___|___|___
 O | X | O 
___|___|___
 X | 8 | 9 
   |   |   ",
]
`;
